[gd_scene load_steps=6 format=3 uid="uid://dg8q0cun8yy4s"]

[ext_resource type="Script" uid="uid://bbpq8rjo5tcwj" path="res://scenes/ui/party_selector.gd" id="1_2xh5j"]
[ext_resource type="Texture2D" uid="uid://uu2myxkxc2s8" path="res://art/pokeball.png" id="2_2xh5j"]
[ext_resource type="Texture2D" uid="uid://dh8lyqfw6ma3c" path="res://art/sprites/icons/1.png" id="2_o7g3j"]
[ext_resource type="Texture2D" uid="uid://cigv8n76dchkl" path="res://art/sprites/icons/5.png" id="3_111go"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2xh5j"]

[node name="PartyButtons" type="HBoxContainer"]
offset_right = 140.0
offset_bottom = 21.0
theme_override_constants/separation = -14
alignment = 1
script = ExtResource("1_2xh5j")

[node name="Slot1" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("2_o7g3j")
stretch_mode = 3

[node name="Slot2" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("3_111go")
stretch_mode = 3

[node name="Slot3" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("2_2xh5j")
stretch_mode = 3

[node name="Slot4" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("2_2xh5j")
stretch_mode = 3

[node name="Slot5" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("2_2xh5j")
stretch_mode = 3

[node name="Slot6" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_2xh5j")
texture_normal = ExtResource("2_2xh5j")
stretch_mode = 3
